style(ui): update skills styling, fix project detail layout, and improve sobre-mi section structure

--- a/pages/project-Enginner.html
+++ b/pages/project-Enginner.html
@@ -72,7 +72,7 @@
     <div data-aos="fade-up" data-aos-delay="450" data-aos-duration="900">
       <h3>Tecnologías</h3>
 
-      <div style="display: flex; flex-direction: row; gap: 1.5rem; margin-top: 1rem;">
+      <div style="display: flex; flex-direction: column; gap: 1.5rem; margin-top: 1rem;">
 
         <div class="tech-card">
           <strong>Frontend</strong>
