fix(sobre-mi): fix text alignment
Adjust the 'About Me' section so paragraphs remain left-aligned
and text does not break on different screen sizes.

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
   </section>
 
 
-  <section id="sobre-mi" class="sobre-mi py-5 mb-5 fade-in delay-1">
+  <section id="sobre-mi" class="sobre-mi fade-in delay-1">
 
     <h2 class="mt-5 text-white">Sobre mí</h2>
 
