refactor(ui): update to the 'sobre mi' section

--- a/index.html
+++ b/index.html
@@ -333,19 +333,19 @@
     <h2 class="mt-5 text-white">Sobre mí</h2>
 
     <p class="text-white">
-      Soy desarrollador y me gusta crear sitios y aplicaciones que se vean bien,
-      funcionen rápido y sean fáciles de usar. Trabajo mucho con HTML, CSS y
-      JavaScript, y siempre estoy aprendiendo algo nuevo para mejorar lo que hago.
+      Me considero una persona tranquila, responsable y curiosa. Me gusta trabajar en equipo,
+      aprender de otros y aportar desde mi lugar. Mi objetivo es seguir creciendo,
+      tanto a nivel profesional como personal, manteniendo siempre la humildad 
+      y las ganas de mejorar.
     </p>
 
     <p class="text-white">
-      Me gusta mantener el código ordenado y simple, y meterle un poco de diseño
-      para que las cosas no solo funcionen, sino que también se sientan prolijas.
+      Fuera del trabajo, disfruto de actividades al aire libre, explorar nuevos lugares o simplemente pasar tiempo en un buen lugar. También me gusta la lectura, especialmente sobre desarrollo personal y tecnología. Creo firmemente que mantener un equilibrio entre la vida profesional y personal es clave para el bienestar y la productividad.
     </p>
 
     <p class="text-white">
-      Hoy estoy enfocado en seguir creciendo, sumando nuevas herramientas y
-      trabajando en proyectos que me desafíen a aprender más.
+      Estoy siempre abierto a nuevas oportunidades y desafíos que me permitan seguir aprendiendo
+      y creciendo en mi carrera como desarrollador web.
     </p>
 
   </section>
