refactor(ui): update to the 'skills' section

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       </div>
 
       <!-- QA Manual -->
-      <div class="accordion-item skill-devops">
+      <div class="accordion-item skill-qa">
         <h2 class="accordion-header" id="headingQAManual">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseQAManual">
