--- a/pages/project-Enginner.html
+++ b/pages/project-Enginner.html
@@ -65,7 +65,7 @@
     <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="900">
       WeSpeak es una plataforma conversacional que utiliza inteligencia artificial para mejorar la comunicación entre
       empresas y sus clientes. Mi rol como Software Engineer incluyó el desarrollo e integración de nuevas
-      funcionalidades tanto para el equipo de venta en el panle de admin como en el usuario final, asegurando una
+      funcionalidades tanto para el equipo de venta en el panel de admin como en el usuario final, asegurando una
       experiencia de usuario fluida y eficiente.
     </p>
 
