--- a/pages/project-Enginner.html
+++ b/pages/project-Enginner.html
@@ -31,7 +31,7 @@
 
 <body>
   <!-- Header / Navegación -->
-  <header class="d-flex flex-wrap justify-content-center py-3 border-bottom bg-dark">
+  <header class="d-flex flex-wrap justify-content-center py-3 border-bottom bg-dark fixed-top">
     <a href="../index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
       <svg class="bi me-2" width="40" height="32">
         <use xlink:href="#bootstrap" />
@@ -55,7 +55,7 @@
   <main class="proyecto-detalle container py-2">
 
     <!-- Título -->
-    <h1 data-aos="fade-up" data-aos-duration="900">wespeak</h1>
+    <h1 class="mt-5 pt-5" data-aos="fade-up" data-aos-duration="900">wespeak</h1>
 
     <!-- Imagen -->
     <img src="../assets/img/projects/screen_wespeak.png" alt="Proyecto Flutter PetFriends" data-aos="fade-up"
